# sim-plugin-flotherm

./: .gitignore  LICENSE-NOTICE.md  README.md  pyproject.toml
src/sim_plugin_flotherm/: __init__.py  _helpers.py  _win32_backend.py  compatibility.yaml  driver.py
src/sim_plugin_flotherm/_skills/flotherm/: SKILL.md  known_issues.md
src/sim_plugin_flotherm/_skills/flotherm/base/reference/: acceptance_checklists.md  error_codes.md  floscript_modeling.md  postprocessing.md
src/sim_plugin_flotherm/_skills/flotherm/solver/2410/: notes.md
src/sim_plugin_flotherm/lib/: __init__.py  error_log.py  floscript.py  floxml.py  floxml_builder.py  msp_field.py  pack.py
tests/: test_flotherm_detect.py  test_flotherm_lint.py  test_flotherm_session.py  test_logfile_xml_helpers.py  test_protocol.py  test_skill_routing.py  test_wheel_contents.py
tests/lib/: test_error_log.py  test_floscript_build.py  test_floxml_builder.py  test_lib_imports.py  test_msp_field.py  test_pack_inspect.py
